# angelv2

./: .gitmodules  CMakeLists.txt  Makefile  PKGBUILD  README.md  angelv1.pro  resources.qrc
include/maddy/: AUTHORS  LICENSE
resources/: scrollbar.qss
src/: PKGBUILD  authworker.cpp  authworker.h  filejson.cpp  filejson.h  main.cpp  mainui.cpp  mainui.h  mainwindow.cpp  mainwindow.h  redditasyncrequest.cpp  redditasyncrequest.h  resources.qrc  submissionwidget.cpp  submissionwidget.h  subredditwidget.cpp  subredditwidget.h  transparentbutton.cpp  transparentbutton.h
